--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
     "autoprefixer": "^10.4.17",
+    "firebase": "^10.7.2",
     "flowbite-react": "^0.7.2",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
