--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "tailwind-scrollbar": "^3.0.5",
     "vite": "^5.0.8"
   }
 }
